# ToDoItorumProject

./: .gitignore  README.md
ToDoListItorum/: CMakeLists.txt
ToDoListItorum/ToDoListItorum/: CMakeLists.txt  ListViewDelegate.cpp  ListViewDelegate.h  ListViewDelegatePrivate.h  NotesListModel.cpp  NotesListModel.h  NotesListView.cpp  NotesListView.h  TaskListModel.cpp  TaskListModel.h  TaskListView.cpp  TaskListView.h  TaskNoteItem.h  TaskPage.cpp  TaskPage.h  ToDoApp.cpp  ToDoApp.h  WriteXMLNote.cpp  WriteXMLNote.h  main.cpp
ToDoListItorum/ToDoListItorum/resource/: icons.qrc  styled.qrc
ToDoListItorum/ToDoListItorum/resource/styles/: TaskPage_style.qss  ToDoApp_style.qss
